src/snapshots/venial__tests__parse_enum_vis.snap
---
source: src/tests.rs
assertion_line: 171
expression: enum_type_pub
---
Enum(
    Enum {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        name: "Hello",
        generic_params: None,
        where_clauses: None,
        variants: [
            EnumVariant {
                attributes: [],
                vis_marker: None,
                name: "A",
                contents: Unit,
                discriminant: None,
            },
            EnumVariant {
                attributes: [],
                vis_marker: None,
                name: "B",
                contents: Tuple(
                    [
                        TupleField {
                            attributes: [],
                            vis_marker: None,
                            ty: [
                                "Foo",
                            ],
                        },
                        TupleField {
                            attributes: [],
                            vis_marker: None,
                            ty: [
                                "Bar",
                            ],
                        },
                    ],
                ),
                discriminant: None,
            },
            EnumVariant {
                attributes: [],
                vis_marker: None,
                name: "C",
                contents: Named(
                    [
                        NamedField {
                            attributes: [],
                            vis_marker: None,
                            name: "foo",
                            ty: [
                                "Foo",
                            ],
                        },
                        NamedField {
                            attributes: [],
                            vis_marker: None,
                            name: "bar",
                            ty: [
                                "Bar",
                            ],
                        },
                    ],
                ),
                discriminant: None,
            },
        ],
    },
)
