src/snapshots/venial__tests__parse_enum_where_clause.snap
---
source: src/tests.rs
assertion_line: 343
expression: enum_type
---
Enum(
    Enum {
        attributes: [],
        vis_marker: None,
        name: "Hello",
        generic_params: None,
        where_clauses: Some(
            [
                "where",
                "A",
                ":",
                "B",
                ",",
                "C",
                "<",
                "D",
                ">",
                ":",
                "E",
                "<",
                "F",
                ">",
                ",",
            ],
        ),
        variants: [
            EnumVariant {
                attributes: [],
                name: "A",
                contents: Unit,
            },
            EnumVariant {
                attributes: [],
                name: "B",
                contents: Tuple(
                    [
                        TupleField {
                            attributes: [],
                            vis_marker: None,
                            ty: [
                                "Foo",
                            ],
                        },
                        TupleField {
                            attributes: [],
                            vis_marker: None,
                            ty: [
                                "Bar",
                            ],
                        },
                    ],
                ),
            },
            EnumVariant {
                attributes: [],
                name: "C",
                contents: Named(
                    [
                        NamedField {
                            attributes: [],
                            vis_marker: None,
                            name: "foo",
                            ty: [
                                "Foo",
                            ],
                        },
                        NamedField {
                            attributes: [],
                            vis_marker: None,
                            name: "bar",
                            ty: [
                                "Bar",
                            ],
                        },
                    ],
                ),
            },
        ],
    },
)
