src/snapshots/venial__tests__parse_expression_binary_or.snap
---
source: src/tests.rs
assertion_line: 629
expression: expressions
---
[
    [
        a,
        "|",
        b,
    ],
    [
        c,
        "|",
        d,
    ],
]
