src/snapshots/venial__tests__parse_expression_list_items.snap
---
source: src/tests.rs
assertion_line: 606
expression: expressions
---
[
    [
        1,
        "+",
        2,
    ],
    [
        3,
    ],
]
