src/snapshots/venial__tests__parse_expression_list_turbofish.snap
---
source: src/tests.rs
assertion_line: 613
expression: expressions
---
[
    [
        a,
        ":",
        ":",
        "<",
        b,
        "+",
        c,
        ",",
        d,
        ">",
        "+",
        e,
    ],
    [
        f,
    ],
]
