src/snapshots/venial__tests__parse_extern_abi_fn.snap
---
source: src/tests.rs
assertion_line: 599
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        qualifiers: FunctionQualifiers {
            tk_default: None,
            tk_const: None,
            tk_async: None,
            tk_unsafe: None,
            tk_extern: Some(
                Ident(
                    extern,
                ),
            ),
            extern_abi: Some(
                Literal {
                    lit: "C",
                },
            ),
        },
        name: Ident(
            extern_fn,
        ),
        generic_params: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    b,
                ),
                ty: [
                    f32,
                ],
            },
        ],
        where_clauses: None,
        return_ty: None,
        body: Some(
            Group {
                delimiter: Brace,
                stream: TokenStream [],
            },
        ),
    },
)
