src/snapshots/venial__tests__parse_extern_crate-2.snap
---
source: src/tests.rs
expression: as_crate
---
ExternCrate(
    ExternCrate {
        attributes: [],
        vis_marker: None,
        tk_extern: Ident(
            extern,
        ),
        tk_crate: Ident(
            crate,
        ),
        name: Ident(
            std,
        ),
        tk_as: Some(
            Ident(
                as,
            ),
        ),
        alias: Some(
            Ident(
                ruststd,
            ),
        ),
        tk_underscore: None,
        tk_semicolon: Punct {
            char: ';',
            spacing: Alone,
        },
    },
)
