src/snapshots/venial__tests__parse_extern_fn_definitions.snap
---
source: src/tests.rs
assertion_line: 538
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        qualifiers: FunctionQualifiers {
            is_default: false,
            is_const: false,
            is_async: false,
            is_unsafe: false,
            extern_abi: Some(
                Literal {
                    lit: "C",
                },
            ),
        },
        name: Ident(
            extern_fn,
        ),
        generic_params: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    b,
                ),
                ty: [
                    "f32",
                ],
            },
        ],
        where_clauses: None,
        return_ty: None,
    },
)
